# RagBridge

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: frontend_test.yml
backend/: Makefile  README.md  alembic.ini  create_tables.py  env.example  pyproject.toml  ragbridge.db  test_user.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/common/: __init__.py  config.py  database.py  exceptions.py  security.py
backend/app/domains/: __init__.py
backend/app/domains/auth/: __init__.py  models.py  router.py  schemas.py  services.py
backend/tests/: conftest.py
backend/tests/api/auth/: test_login.py  test_me.py  test_register.py
docs/: branch-strategy.md
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-lock.yaml.bak
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/auth/reset-password/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/billing/analytics/: page.tsx
frontend/app/dashboard/billing/pricing/: page.tsx
frontend/app/dashboard/billing/usage/: page.tsx
frontend/app/dashboard/documents/: page.tsx
frontend/app/dashboard/documents/completed/: page.tsx
frontend/app/dashboard/documents/processing/: page.tsx
frontend/app/dashboard/documents/review/: page.tsx
frontend/app/dashboard/monitoring/: page.tsx
frontend/app/dashboard/monitoring/alerts/: page.tsx
frontend/app/dashboard/monitoring/performance/: page.tsx
frontend/app/dashboard/projects/: page.tsx
frontend/app/dashboard/projects/api-keys/: page.tsx
frontend/app/dashboard/projects/members/: page.tsx
frontend/app/dashboard/search/: page.tsx
frontend/app/dashboard/search/favorites/: page.tsx
frontend/app/dashboard/search/history/: page.tsx
frontend/app/dashboard/validation/mapping/: page.tsx
frontend/app/dashboard/validation/reprocess/: page.tsx
frontend/app/dashboard/validation/rules/: page.tsx
frontend/components/: error-boundary.tsx  ragbridge-dashboard.tsx  toast-demo.tsx
frontend/components/auth/: auth-form.tsx  auth-layout.tsx  password-reset-form.tsx
frontend/components/billing/: billing-info.tsx  usage-analytics.tsx  usage-status.tsx
frontend/components/dashboard/: ai-feedback-board.tsx  animated-background.tsx  dashboard-header.tsx  dashboard-overview.tsx  metrics-cards.tsx  pipeline-status.tsx  project-overview.tsx  ragbridge-dashboard-refactored.tsx  recent-documents.tsx  usage-billing-snapshot.tsx  user-focused-hero.tsx  user-task-queue.tsx
frontend/components/documents/: completed-documents.tsx  document-management.tsx  document-upload.tsx  documents-in-progress.tsx  pending-review.tsx
frontend/components/layout/: dashboard-layout.tsx  sidebar.tsx
frontend/components/monitoring/: alert-center.tsx  performance-metrics.tsx  system-monitoring.tsx
frontend/components/projects/: api-key-management.tsx  project-management.tsx  team-member-management.tsx
frontend/components/search/: ai-search.tsx  favorites.tsx  search-history.tsx  smart-search.tsx
frontend/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  memoized-icon.tsx  pagination.tsx  progress.tsx  scroll-area.tsx  tabs.tsx  toast.tsx  tooltip.tsx  virtual-scroll.tsx
frontend/components/validation/: auto-mapping-builder.tsx  reprocessing-queue.tsx  validation-rules-builder.tsx
frontend/hooks/: use-ai-search.ts  use-alert-center.ts  use-api-keys.ts  use-auth.ts  use-auto-mapping.ts  use-billing-info.ts  use-completed-documents.ts  use-document-upload.ts  use-documents-in-progress.ts  use-documents.ts  use-favorites.ts  use-pending-review.ts  use-performance-metrics.ts  use-reprocessing-queue.ts  use-search-history.ts  use-search.ts  use-system-metrics.ts  use-team-members.ts  use-toast.ts  use-usage-analytics.ts  use-usage-status.ts  use-validation-rules.ts  use-workspaces.ts
frontend/lib/: api.ts  constants.ts
